--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -37,7 +37,7 @@
                 {% if request.user.is_superuser %}
                     <small>
                         <a href="{% url 'edit_blog' blog.id %}">Edit</a>
-                        <a href="" class="text-danger">Delete</a>
+                        <a href="{% url 'delete_blog' post.id %}" class="text-danger">Delete</a>
                     </small>
                 {% endif %}
             </div>
