--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h2>{{ blog.blog_title }}</h2>
-            <p class="basket-meta mt-2">{{ blog.date_created }} by {{ blog.author }} </p>
+            <p class="caption mt-2">{{ blog.date_created }} by {{ blog.author }} </p>
         </div>
     </div>
 
