Add comment to blog_detail view and form to template

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -57,6 +57,23 @@
             <p>Check out our blog comments!</p>
         </div>
         <div class="col-12">
+            {% if request.user.is_authenticated %}
+            <form action="{% url 'blog_detail' blog.id %}" method="POST">
+                {% csrf_token %}
+                {{ comment_form|crispy }}
+                <div class="text-center">
+                    <button class="btn btn-blue" type="submit" >Add comment</button>
+                    <a href="{% url 'blog_detail' blog.id %}">
+                        <button class="btn btn-outline-grey" type="button">Cancel</button>
+                    </a>
+                </div>
+            </form>
+            {% endif %}
+        </div>
+        <div class="col-12">
+            {% for comment in blog.comments %}
+            {{ comment }}
+            {% endfor %}
         </div>
     </div>
 </div>
