Add BlogComment admin and amend blog_detail view

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -71,8 +71,8 @@
             {% endif %}
         </div>
         <div class="col-12">
-            {% for comment in blog.comments %}
-            {{ comment }}
+            {% for comment in comments %}
+            {{ blog_comment }}
             {% endfor %}
         </div>
     </div>
