--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -72,7 +72,7 @@
         </div>
         <div class="col-12">
             {% for comment in comments %}
-            {{ blog_comment }}
+            {{ comment.blog_comment }}
             {% endfor %}
         </div>
     </div>
