Add edit blog comment view, url and template

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -52,6 +52,10 @@
         right: 0;
     }
 
+#edit-comment {
+    display: none;
+}
+
 /* Media queries */
 @media (max-width: 425px) {
    .blog-img-container {
