Amend navbar optoins depending on user

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,9 +82,14 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
+                                <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
+                                <a href="{% url 'add_blog' %}" class="dropdown-item">Add Blog</a>
+                                {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                {% else %}
+                            {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
