--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -178,7 +178,7 @@
                     {% if review.author == request.user or request.user.is_superuser %}
                     <small>
                         <a href="{% url 'edit_product_review' review.id %}">Edit</a>
-                        <a href="" class="text-danger">Delete</a>
+                        <a href="{% url 'delete_product_review' review.id %}" class="text-danger">Delete</a>
                     </small>
                     {% endif %}
                 {% endfor %}
