Fix blog_comment display and layout of blog_detail

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -56,6 +56,10 @@
     display: none;
 }
 
+#id_blog_comment.textarea.form-control {
+    height: 120px;
+}
+
 /* Media queries */
 @media (max-width: 425px) {
    .blog-img-container {
