--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -46,30 +46,52 @@
     <div class="row mt-4">
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <p>{{ blog.blog_content }}</p>
-            <a href="{% url 'blogs' %}">
-                <button class="btn btn-blue">Back to blogs</button>
+            <a href="{% url 'blogs' %}" class="float-end">
+                <button class="btn btn-sm btn-grey">Back to blogs</button>
             </a>
         </div>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-5">
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h3>Comments</h3>
-            {% for comment in comments %}
-                <div class="comments">
-                    <p>{{ comment.blog_comment }}</p>
-                    <small class="caption float-end">{{ comment.author }} {{ comment.date_added }}</small>
-                    {% if request.user == comment.author or request.user.is_superuser %}
-                        <small>
-                            <a href="{% url 'edit_blog_comment' comment.id %}">
-                                Edit
-                            </a>
-                            <a href="{% url 'delete_blog_comment' comment.id %}" class="text-danger">Delete</a>
-                        </small>
-                    {% endif %}
-                </div>
-            {% endfor %}
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Date</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Comment</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for comment in comments %}
+                        <tr>
+                            <th scope="row">{{ comment.date_added }}</th>
+                            <td>{{ comment.author }}</td>
+                            <td>{{ comment.blog_comment }}</td>
+                            <td>{% if request.user == comment.author %}
+                                <a href="{% url 'edit_blog_comment' comment.id %}"></a>
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                </a>
+                                {% endif %}
+                            </td>
+                            <td>{% if request.user == comment.author or request.user.is_superuser %}
+                                <a href="{% url 'delete_blog_comment' comment.id %}">
+                                    <i class="fa-solid fa-trash-can"></i>
+                                </a>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+           
         </div>
-        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-5">
             {% if request.user.is_authenticated %}
             <form action="{% url 'blog_detail' blog.id %}" method="POST">
                 {% csrf_token %}
@@ -77,7 +99,7 @@
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Add comment</button>
                     <a href="{% url 'blog_detail' blog.id %}">
-                        <button class="btn btn-outline-grey" type="button">Cancel</button>
+                        <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
             </form>
