Uniform headers in allauth and button styling throughout

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -30,7 +30,7 @@
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
                     <a href="{% url 'products' %}">
-                        <button class="btn btn-outline-grey" type="button">Cancel</button>
+                        <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
             </form>
