--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -27,7 +27,7 @@
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Update</button>
                     <a href="">
-                        <button class="btn btn-outline-grey" type="button">Cancel</button>
+                        <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
             </form>
