--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -49,7 +49,7 @@
                                     <div class="form-group">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-sm btn-outline-grey rounded-0"
+                                                <button class="decrement-qty btn btn-sm btn-grey rounded-0"
                                                     data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-minus fa-sm"></i>
@@ -60,7 +60,7 @@
                                                 value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id  }}"
                                                 id="id_qty_{{ item.item_id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-sm btn-outline-grey rounded-0"
+                                                <button class="increment-qty btn btn-sm btn-grey rounded-0"
                                                     data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-plus fa-sm"></i>
@@ -108,7 +108,7 @@
                 </span>
             </a>
             <a href="{% url 'products' %}">
-                <button type="button" class="btn btn-outline-grey btn-lg basket-buttons">Continue shopping</button>
+                <button type="button" class="btn btn-grey btn-lg basket-buttons">Continue shopping</button>
             </a>
         </div>
     </div>
