--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -30,7 +30,7 @@
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
                     <a href="{% url 'blogs' %}">
-                        <button class="btn btn-outline-grey" type="button">Cancel</button>
+                        <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
             </form>
