--- a/blog/templates/blog/edit_blog_comment.html
+++ b/blog/templates/blog/edit_blog_comment.html
@@ -26,7 +26,7 @@
                     <div class="text-center">
                         <button class="btn btn-blue" type="submit" >Update comment</button>
                         <a href="{% url 'blog_detail' blog.id %}">
-                            <button class="btn btn-outline-grey" type="button">Cancel</button>
+                            <button class="btn btn-grey" type="button">Cancel</button>
                         </a>
                     </div>
                 </form>
