--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -65,7 +65,7 @@
                 <div class="mt-3">
                     <button id="submit-button" class="btn btn-blue btn basket-buttons">Complete order</button>
                     <a href="{% url 'view_basket' %}">
-                        <button type="button" class="btn btn-outline-grey btn basket-buttons">Back to basket</button>
+                        <button type="button" class="btn btn-grey btn basket-buttons">Back to basket</button>
                     </a>
                     <p class="small text-danger">Your card will be charged £{{ grand_total|floatformat:2 }}</p>
                 </div>
