--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -146,7 +146,7 @@
                         <div class="col-12 mt-4">
                             <input type="submit" class="btn btn-blue basket-buttons" value="Add to basket">
 
-                            <a href="{% url 'products' %}" class="btn btn-outline-grey basket-buttons">
+                            <a href="{% url 'products' %}" class="btn btn-grey basket-buttons">
                                 <span>Continue shopping</span>
                             </a>
 
