--- a/static/css/base.css
+++ b/static/css/base.css
@@ -26,24 +26,28 @@ button:hover {
 .btn-blue {
     background-color: #529afe;
     color: #fff;
-    border-radius: 0;
     text-transform: uppercase;
     border: 1px solid #529afe;
     border-radius: 0.25rem;
 }
 
-.btn-outline-grey {
-    border: 1px solid #6c757d;
-    color: #6c757d !important;
-    border-radius: 0;
+.btn-grey {
+    border: 1px solid #30323d;
+    background-color: #30323d;
+    color: #fff !important;
     font-size: 1rem;
     border-radius: 0.25rem;
+    text-transform: uppercase;
 }
 
 .caption {
     font-size: 1.2rem;
     color: #666;
     text-transform: revert;
+}
+
+.fa-solid {
+    color:#30323d !important;
 }
 
 
@@ -53,15 +57,6 @@ button:hover {
     color: #529afe;
     text-transform: lowercase;
     font-weight: 700;
-}
-
-/* .navbar {
-    padding: 0;
-} */
-
-.navbar-light .navbar-nav .nav-link, .dropdown-item,
-.nav-link i {
-    color:#30323d;
 }
 
 .nav-options {
