--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,16 +5,16 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-<h1>{% trans "Sign Out" %}</h1>
+<h2 class="text-center">{% trans "Logout" %}</h2>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="text-center mt-4">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
+<form method="post" action="{% url 'account_logout' %}" class="text-center">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button class="btn btn-grey" type="submit">{% trans 'Logout' %}</button>
 </form>
 
 
