--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,12 +5,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+    <h2>{% trans "Change Password" %}</h2>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-blue" type="submit" name="action">{% trans "Change Password" %}</button>
-        <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn btn-grey" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 {% endblock %}
