--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <h2>{% trans "Password Reset" %}</h2>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -18,7 +18,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <input class="btn btn-blue" type="submit" value="{% trans 'Reset My Password' %}" />
-        <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn btn-grey" href="{% url 'account_login' %}">Back to Login</a>
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
