--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,7 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <h2>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -15,7 +15,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input class="btn btn-blue" type="submit" name="action" value="{% trans 'change password' %}"/>
-                <a class="btn btn-outline-grey" href="{% url 'account_login' %}">Back to Login</a>
+                <a class="btn btn-grey" href="{% url 'account_login' %}">Back to Login</a>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
