--- a/templates/base.html
+++ b/templates/base.html
@@ -156,7 +156,7 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="container-fluid">
+    <footer class="container-fluid mt-5">
         <div class="row">
             <div class="col-6">
                 <div class="row">
