--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -26,7 +26,7 @@
         <div class="col-12 col-md-6 offset-md-3">
             <form action="" method="POST" class="form">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {{ contact_form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
                     <a href="">
