--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -2,17 +2,17 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
+<link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col">
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
 
-            </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
             <h2>Blogs</h2>
         </div>
         <div class="col-12">
-            <a href="{% url 'add_blog' %}" >
+            <a href="{% url 'add_blog' %}">
                 <button class="btn btn-blue">Add Blog</button>
             </a>
         </div>
@@ -40,8 +40,30 @@
                     {% if request.user.is_superuser %}
                     <small>
                         <a href="{% url 'edit_blog' post.id %}">Edit</a>
-                        <a href="{% url 'delete_blog' post.id %}" class="text-danger">Delete</a>
+                        <a href="#deleteBlog" class="text-danger" data-bs-toggle="modal"
+                        data-bs-target="#deleteBlog">Delete</a>
                     </small>
+                    <!-- Deletion confirmation Bootstrap modal -->
+                    <div class="modal fade" id="deleteBlog" tabindex="-1" aria-labelledby="Delete blog confirmation modal"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="text-center">Are you sure you want to delete {{ post.blog_title }} blog?</p>
+                                  </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
+                                    <a href="{% url 'delete_blog' post.id %}" class="text-danger">
+                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     {% endif %}
                 </a>
                 {% else %}
@@ -63,6 +85,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 {% endblock %}
