--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -36,8 +36,30 @@
                 {% if request.user.is_superuser %}
                     <small>
                         <a href="{% url 'edit_product' product.id %}">Edit</a>
-                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                        <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal"
+                        data-bs-target="#deleteProduct">Delete</a>
                     </small>
+                    <!-- Deletion confirmation Bootstrap modal -->
+                    <div class="modal fade" id="deleteProduct" tabindex="-1" aria-labelledby="Delete product confirmation modal"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="text-center">Are you sure you want to delete {{ product.name }}?</p>
+                                  </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
+                                    <a href="{% url 'delete_product' product.id %}" class="text-danger">
+                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
                 <form action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
@@ -178,8 +200,30 @@
                     {% if review.author == request.user or request.user.is_superuser %}
                     <small>
                         <a href="{% url 'edit_product_review' review.id %}">Edit</a>
-                        <a href="{% url 'delete_product_review' review.id %}" class="text-danger">Delete</a>
+                        <a href="#deleteReview" class="text-danger" data-bs-toggle="modal"
+                        data-bs-target="#deleteReview">Delete</a>
                     </small>
+                    <!-- Deletion confirmation Bootstrap modal -->
+                    <div class="modal fade" id="deleteReview" tabindex="-1" aria-labelledby="Delete review confirmation modal"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="text-center">Are you sure you want to delete your review?</p>
+                                  </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
+                                    <a href="{% url 'delete_product_review' review.id %}" class="text-danger">
+                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     {% endif %}
                 {% endfor %}
             </div>
