--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -83,7 +83,8 @@
                         </a>
                         {% else %}
                         <a href="{% url 'product_detail' product.id %}">
-                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top img-fluid" alt="{{ product.name }}">
+                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top img-fluid"
+                                alt="{{ product.name }}">
                         </a>
                         {% endif %}
                         <div class="card-body pb-0 text-center">
@@ -96,8 +97,33 @@
                                     {% if request.user.is_superuser %}
                                     <small>
                                         <a href="{% url 'edit_product' product.id %}">Edit</a>
-                                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                                        <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal"
+                                            data-bs-target="#deleteProduct">Delete</a>
                                     </small>
+                                    <!-- Deletion confirmation Bootstrap modal -->
+                                    <div class="modal fade" id="deleteProduct" tabindex="-1"
+                                        aria-labelledby="Delete product confirmation modal" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p class="text-center">Are you sure you want to delete
+                                                        {{ product.name }}?</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-sm btn-grey"
+                                                        data-bs-dismiss="modal">Cancel</button>
+                                                    <a href="{% url 'delete_product' product.id %}" class="text-danger">
+                                                        <button type="button"
+                                                            class="btn btn-sm btn-danger">Delete</button>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     {% endif %}
                                 </div>
                             </div>
