--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-8 col-lg-10">
                         <div class="row">
-                            <div class="col-md-12 col-lg-6">
+                            <div class="col-12 col-lg-5">
                                 <h3 id="basket-item-title">{{ item.product.name }}</h3>
                                 <h4 class="caption">Size:{% if item.product.men_sizes %}
                                     {{ item.size|upper }}
@@ -43,38 +43,72 @@
                                 </h4>
                                 <h4 class="caption">SKU: {{ item.product.sku|upper }}</h4>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-12 col-lg-4">
                                 <form class="form update-form" action="{% url 'adjust_basket' item.item_id %}" method="POST">
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-sm btn-grey rounded-0"
-                                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
-                                                    <span>
-                                                        <i class="fas fa-minus fa-sm"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
-                                            <input class="form-control form-control-sm qty_input" type="number" name="quantity"
-                                                value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id  }}"
-                                                id="id_qty_{{ item.item_id }}">
-                                            <div class="input-group-append">
-                                                <button class="increment-qty btn btn-sm btn-grey rounded-0"
-                                                    data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
-                                                    <span>
-                                                        <i class="fas fa-plus fa-sm"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
+                                            <!-- Quantity selector -->
+                                            <select class="form-control form-select mx-auto"
+                                                name="quantity" value="{{ item.quantity }}"
+                                                data-product_id="{{ item.product.id }}"
+                                                id="id_qty_{{ item.product.id }}">
+                                                <option value="1" {% if item.quantity == 1 %}selected{% endif %}>1
+                                                </option>
+                                                <option value="2" {% if item.quantity == 2 %}selected{% endif %}>2
+                                                </option>
+                                                <option value="3" {% if item.quantity == 3 %}selected{% endif %}>3
+                                                </option>
+                                                <option value="4" {% if item.quantity == 4 %}selected{% endif %}>4
+                                                </option>
+                                                <option value="5" {% if item.quantity == 5 %}selected{% endif %}>5
+                                                </option>
+                                                <option value="6" {% if item.quantity == 6 %}selected{% endif %}>6
+                                                </option>
+                                                <option value="7" {% if item.quantity == 7 %}selected{% endif %}>7
+                                                </option>
+                                                <option value="8" {% if item.quantity == 8 %}selected{% endif %}>8
+                                                </option>
+                                                <option value="9" {% if item.quantity == 9 %}selected{% endif %}>9
+                                                </option>
+                                                <option value="10" {% if item.quantity == 10 %}selected{% endif %}>10
+                                                </option>
+                                            </select>
                                         </div>
                                     </div>
                                 </form>
-                                <a class="update-link"><i class="fas fa-sync-alt mt-3" aria-label="Will update quantity of item in basket"></i></a>
-                                <a class="remove-item" id="remove_{{ item.item_id }}"
-                                    data-product_size="{{ item.size }}" aria-label="Will remove quantity of item from basket"><i class="far fa-trash-alt"></i></a>
+                                <a class="update-link small mt-2 float-start"
+                                    aria-label="Will update quantity of item in basket">Update</a>
+                                <a href="#deleteProduct" class="text-danger small mt-2 float-end" data-bs-toggle="modal"
+                                    data-bs-target="#deleteProduct"
+                                    aria-label="Will remove quantity of item from basket">Remove</a>
+                                 <!-- Deletion confirmation Bootstrap modal -->
+                                 <div class="modal fade" id="deleteProduct" tabindex="-1"
+                                     aria-labelledby="Delete product confirmation modal" aria-hidden="true">
+                                     <div class="modal-dialog modal-dialog-centered">
+                                         <div class="modal-content">
+                                             <div class="modal-header">
+                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                     aria-label="Close"></button>
+                                             </div>
+                                             <div class="modal-body">
+                                                 <p class="text-center">Are you sure you want to delete
+                                                     {{ item.product.name }}?</p>
+                                             </div>
+                                             <div class="modal-footer">
+                                                 <button type="button" class="btn btn-sm btn-grey"
+                                                     data-bs-dismiss="modal">Cancel</button>
+                                                 <a class="remove-item" id="remove_{{ item.item_id }}"
+                                                     data-product_size="{{ item.size }}"
+                                                     aria-label="Will remove quantity of item from basket">
+                                                     <button type="button" class="btn btn-sm btn-danger">Remove</button>
+                                                </a>
+                                             </div>
+                                         </div>
+                                     </div>
+                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-2">
+                            <div class="col-12 col-lg-2">
                                 <h4>£{{ item.product.price }}</h4>
                             </div>
                         </div>
