--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -95,7 +95,7 @@
                             <td>{{ comment.author }}</td>
                             <td>{{ comment.blog_comment }}</td>
                             <td>{% if request.user == comment.author %}
-                                <a href="{% url 'edit_blog_comment' comment.id %}"></a>
+                                <a href="{% url 'edit_blog_comment' comment.id %}">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </a>
                                 {% endif %}
@@ -153,7 +153,4 @@
     </div>
 </div>
 {% endblock %}
-{% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'blog/js/blog.js' %}"></script>
-{% endblock %}
+
